update registration form template to 2012 text

--- a/cmua/templates/register/index.html
+++ b/cmua/templates/register/index.html
@@ -9,10 +9,7 @@
       <span class="errorlist">There were errors submitting your information; see below</span>
     {% endif %}
     <p>
-    <span style="color:red">IMPORTANT: THE MONDAY NIGHT SUMMER LEAGUE IS ALREADY FULL OF MEN.</span> MALES CAN CONTINUE TO REGISTER FOR THAT LEAGUE, BUT THEY WILL BE PLACED ON A WAITING LIST AND WILL ONLY BE ADDED TO THE LEAGUE IF WE DECIDE TO EXPAND. NOTE THAT COUPLES WILL ALSO BE WAIT-LISTED AT THIS TIME.
-    <p>
-The Central Maryland Ultimate Association (CMUA) will be offering three 
-separate leagues this summer.  Two will be co-ed and the third will be a new gender-blind Open league.  All leagues are open to all skill levels. Participate in one or two or all of the leagues for the same price ($20.00).<br>
+The Central Maryland Ultimate Association (CMUA) will be offering two separate summer leagues in 2012. Both leagues are co-ed and are open to all skill levels. Participate in one or both of the leagues for the same price ($20.00).
 <h4>The Monday Night League - Our classic Co-ed summer league</h4>
 <ul>
 <li>Who:
@@ -34,7 +31,7 @@ separate leagues this summer.  Two will be co-ed and the third will be a new gen
     </ul>
 <li>When:
     <ul> 
-    <li> Registration is held during the month of May.  The Deadline is May 27, but this league always fills up prior to the deadline!
+    <li> Registration is held during the month of May.  The Deadline is May 25, but this league always fills up prior to the deadline!
     <li> Games are played from June to mid-August. 
     <li> First round games are scheduled to start at 6:30 PM and the last round typically ends around 9 PM.  Longer rounds are played on fields with lights; hence plan on playing till 10 PM on those evenings.
     </ul>
@@ -56,7 +53,7 @@ separate leagues this summer.  Two will be co-ed and the third will be a new gen
     <li> An 8 to 10 team modified-mixed format league.
     <li> Teams are formed via a two part process:
         <ul>
-        <li> A clique of up to 7 players is formed prior to the draft.  (Someone from the clique must notify the league commissioner of their intent to create a team by the sign up deadline of May 27.)
+        <li> A clique of up to 7 players is formed prior to the draft.  (Someone from the clique must notify the league commissioner of their intent to create a team by the sign up deadline of May 25.)
         <li> A leader from the clique attends the draft and picks the rest of the team.
         </ul>
     <li> The mixed format for this league is determined at game time each week and is based on the number of women in attendance that evening.
@@ -68,42 +65,12 @@ separate leagues this summer.  Two will be co-ed and the third will be a new gen
     </ul>
 <li> When: 
     <ul>
-    <li> Registration is held during the month of May.  The Deadline is May 27.
+    <li> Registration is held during the month of May.  The Deadline is May 25.
     <li> Games are played from June to early-August. 
     <li> Games are scheduled to start at 6:30 PM and typically take two hours to play.
     </ul>
 </ul>
 
-
-<h4>The Thursday Night League - AKA The Open League.</h4>
-<ul> 
-<li>Who:
-    <ul>
-    <li> Adult Ultimate players of all skill levels and genders are invited to play in this new gender-blind league.  
-    <li> All players must sign up individually and be computer-drafted onto (hopefully) balanced teams.
-    <li> Underage players may sign up only if they have a sponsor in the league. See the "Under 18?" paragraph below for details.
-    </ul>
-<li>What:
-    <ul>
-    <li> A 4 to 6 team Open format league. “Open format” typically translates into “Men’s league,” but women are welcomed to join as long as they are willing to match up against anyone (male or female) on the other team.
-    <li> Teams are formed via a two part process:
-        <ul>
-        <li> A computer will be used to perform the initial draft based on the self ratings provided on the registration forms.
-        <li> A committee will review the draft and correct any obvious imbalances.
-        </ul>
-    <li> One lengthy game is played each week, but an occasional double header may be required in order to make up a rained out game.
-    </ul>
-<li>Where:
-    <ul>
-    <li>All games are played at fields in the Catonsville area.
-    </ul>
-<li>When:
-    <ul>
-    <li>Registration is held during the month of May. The Deadline is May 27.
-    <li>Games are played from June to early-August.
-    <li> Games are scheduled to start at 6:30 PM and typically take two hours to play.
-    </ul>
-</ul>
 
 <h4>Registration Information:</h4>
 
@@ -139,9 +106,11 @@ href="mailto:cmua.summerleagues@comcast.net">email</a> or call Barry at 301-490-
   {% endfor %}
     <tr><td colspan=3><br><br>
 ACKNOWLEDGEMENT, WAIVER AND RELEASE OF LIABILITY:<br>
-I HEREBY CONFIRM PARTICIPANT IS IN GOOD HEALTH AND ABLE TO PARTICIPATE IN THE ACTIVITY, I ACKNOWLEDGE THE ACTIVITY MAY INVOLVE RISKS AND DANGER OF BODILY INJURY OR DEATH. I FULLY ACCEPT AND ACKNOWLEDGE THE ACTIVITY MAY INVOLVE RISK AND I HEREBY ASSUME THE RISK AND RESPONSIBILITY FOR ALL DANGERS AND RISKS ASSOCIATED WITH PARTICIPATION IN THE ACITIVITY. I acknowledge Baltimore County, Maryland, the recreation council, and their respective employees, directors, officers, volunteers, members and any other participant, entity, party or person involved in any regard with the activity or the activity premises, and their respective agents, personal representatives, heirs, employees, contractors, successors and assigns (each an "Activity Representative" and collectively the "Activity Representatives"), SHALL NOT BE RESPONSIBLE OR LIABLE IN ANY REGARD OR MANNER FOR ANY AND ALL PROPERTY DAMAGE OR BODILLY INJURY (INCLUDING SERIOUS PHYSICAL INJURY OR EVEN DEATH) INCURRED BY PARTICIPANT OR ANY PARTY RELATED THERETO AS A RESULT OF HIS/HER PARTICIPATION IN THE ACTIVITY.<br><br>
+I HEREBY CONFIRM PARTICIPANT IS IN GOOD HEALTH AND ABLE TO PARTICIPATE IN THE ACTIVITY, I ACKNOWLEDGE THE ACTIVITY MAY INVOLVE RISKS AND DANGER OF BODILY INJURY OR DEATH. I FULLY ACCEPT AND ACKNOWLEDGE THE ACTIVITY MAY INVOLVE RISK AND I HEREBY ASSUME THE RISK AND RESPONSIBILITY FOR ALL DANGERS AND RISKS ASSOCIATED WITH PARTICIPATION IN THE ACITIVITY. .  I further understand that concussion information is available at <a href="http://www.cdc.gov/concussion">www.cdc.gov/concussion</a>.
 
-I have read, fully understand and hereby freely sign, approve of, and agree to the terms of the registration form. I HEREBY UNCONDITIONALLY RELEASE, DISCHARGE, COVENANT NOT TO SUE, WAIVE MY RIGHTS AND REMEDIES, AND AGREE TO HOLD HARMLESS THE ACTIVITY REPRESENTATIVE from any and all claims costs, demands, losses, damages, or expenses associated with, in whole or in part, participants involvement with the activity. I certify all answers and information provided on the registration form are to the best of my knowledge true and correct throughout the activity. I shall inform the recreation council, in writing, if any of the information provided in the registration form is incorrect or changes during the course of the activity. I understand Baltimore County and/or the recreation council do not perform criminal and/or background checks on activity representatives. I shall present a government-issued photo identification card including, but not limited to, my driver's license, passport, or United States Visa to the activity representative for review, if requested, at the time I submit this registration form to the recreation council.<br><br>
+<p>I acknowledge Baltimore County, Maryland, the recreation council, and their respective employees, directors, officers, volunteers, members and any other participant, entity, party or person involved in any regard with the activity or the activity premises, and their respective agents, personal representatives, heirs, employees, contractors, successors and assigns (each an "Activity Representative" and collectively the "Activity Representatives"), SHALL NOT BE RESPONSIBLE OR LIABLE IN ANY REGARD OR MANNER FOR ANY AND ALL PROPERTY DAMAGE OR BODILLY INJURY (INCLUDING SERIOUS PHYSICAL INJURY OR EVEN DEATH) INCURRED BY PARTICIPANT OR ANY PARTY RELATED THERETO AS A RESULT OF HIS/HER PARTICIPATION IN THE ACTIVITY.<br><br>
+
+<p>I have read, fully understand and hereby freely sign, approve of, and agree to the terms of the registration form. I HEREBY UNCONDITIONALLY RELEASE, DISCHARGE, COVENANT NOT TO SUE, WAIVE MY RIGHTS AND REMEDIES, AND AGREE TO HOLD HARMLESS THE ACTIVITY REPRESENTATIVE from any and all claims costs, demands, losses, damages, or expenses associated with, in whole or in part, participants involvement with the activity. I certify all answers and information provided on the registration form are to the best of my knowledge true and correct throughout the activity. I shall inform the recreation council, in writing, if any of the information provided in the registration form is incorrect or changes during the course of the activity. I understand Baltimore County and/or the recreation council do not perform criminal and/or background checks on activity representatives. I shall present a government-issued photo identification card including, but not limited to, my driver's license, passport, or United States Visa to the activity representative for review, if requested, at the time I submit this registration form to the recreation council.<br><br>
 
   <tr><td colspan=2>{{ form.i_agree_to_terms.label }}</td><td>{{ form.i_agree_to_terms }}</td></tr>
   <tr><td></td><td></td><td><input type="submit" value="Submit" /></td></tr>
