--- a/cmua/templates/register/checkout.html
+++ b/cmua/templates/register/checkout.html
@@ -26,8 +26,8 @@ Barry Lloyd<br>
 Columbia, MD 21046.<br><br>
 </center>
 Please make checks payable to "Catonsville Recreation and Parks 
-Council." The form and fee may also be turned in at the Catonsville High Fields on 
-any Monday in May.  Deadline is May 27. YOUR REGISTRATION IS NOT COMPLETE UNTIL YOUR FEE HAS BEEN RECEIVED!
+Council." The form and fee may also be turned in at the Banneker Rec. Center fields on 
+any Monday in May.  Deadline is May 25. YOUR REGISTRATION IS NOT COMPLETE UNTIL YOUR FEE HAS BEEN RECEIVED!
 <br><br>
     </div>
   </div>
