summer league is full

--- a/cmua/templates/register/index.html
+++ b/cmua/templates/register/index.html
@@ -10,6 +10,7 @@
     {% endif %}
     <p>
 The Central Maryland Ultimate Association (CMUA) will be offering two separate summer leagues in 2012. Both leagues are co-ed and are open to all skill levels. Participate in one or both of the leagues for the same price ($20.00).
+<p><strong>IMPORTANT: THE MONDAY NIGHT SUMMER LEAGUE IS ALREADY FULL OF MEN.</strong> MALES CAN CONTINUE TO REGISTER FOR THAT LEAGUE, BUT THEY WILL BE PLACED ON A WAITING LIST AND WILL ONLY BE ADDED TO THE LEAGUE IF WE DECIDE TO EXPAND. NOTE THAT COUPLES WILL ALSO BE WAIT-LISTED AT THIS TIME.
 <h4>The Monday Night League - Our classic Co-ed summer league</h4>
 <ul>
 <li>Who:
